# lampcraft

./: .gitignore  CMakeLists.txt  README.md  windows-mingw-toolchain.cmake
include/: Application.h  Block.h  Camera.h  Shader.h  World.h
shaders/: text.frag  ui.frag  ui.vert  wireframe.frag  wireframe.vert  world.frag  world.vert
src/: Application.cpp  Camera.cpp  Shader.cpp  World.cpp  main.cpp
